[package]
name = "swan-updown"
version = "0.3.1"
edition = "2024"
authors = ["Zhang Zongyu <zongyu@novazy.net>"]
license = "MIT"
repository = "https://github.com/6-6-6/swan-updown"
homepage = "https://github.com/6-6-6/swan-updown"
description = "swan-updown helps create ipsec interfaces"
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rtnetlink = "0.14.1"
netlink-packet-route = "0.19.0"
netlink-packet-utils = "0.5.2"
futures = "0.3.31"
tokio = { version = "1.45.0", default-features = false, features = ["rt-multi-thread", "macros", "time", "sync"] }
nix = { version = "0.30.1", default-features = false, features = ["sched"]}
clap = { version = "4.5.38", features = ["derive"] }
hex = { version = "0.4.3" }
syslog = "7.0.0"
env_logger = { version = "0.11.8", default-features = false }
log = { version = "0.4.27", features = ["release_max_level_debug"] }
eyre = "0.6.12"

[profile.release]
lto = true
